--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,7 @@
 \newcommand{\proof}{\textbf{Доказательство:} }
 \newcommand{\seq}[1]{$\{#1\}$}
 \newcommand{\intr}[2]{$(#1;#2)$}
+\newcommand{\otr}[2]{$[#1;#2]$}
 \newcommand{\Q}{$\mathbb{Q}$}
 
 \begin{document}
@@ -641,6 +642,88 @@
         не входят в область определения $f(x)$. 
         В силу монотонности $f(x)$ эти интервалы не пересекаются. На каждом интервале выберем рациональную точку.
         Таким образом мы установили взаимнооднозначное соответствие между точками разрыва и подмножеством счетного множества рациональных чисел \Q.
+  
+
+    \newpage
     
+    \section{}
+    \subsection*{Свойства  функций,  непрерывных  на  отрезке}
+        \subsubsection*{Ограниченность}
+        \theorem если функции $f(x)$ непрерывна на отрезке \otr{a}{b}, то она ограничена на этом отрезке.
+        \\
+        \proof пусть $f(x)$ неограничена на \otr{a}{b}:
+        \[ \forall n \in \mathbb{N} \exists x_n \in [a;b]: |f(x_n)| > n \]
+        \[ \{y_n\} = \{f(x_n)\} \]
+        последовательность \seq{y_n} -- бесконечно большая. Последовательность \seq{x_n} ограничена, следовательно она содержит в себе сходящуюся подпоследовательность
+        \seq{x_{k_n}}. Раз последовательность \seq{x_{k_n}} сходится, а $f(x)$ непрерывна, последовательность \seq{f(x_{k_n})} сходится и не является бесконечно большой,
+        что противоречит тому, что \seq{f(x_n)} -- бесконечно большая.
+        
+        \subsubsection*{Достижимость точных верхней и нижней граней}
+        \theorem если функции $f(x)$ непрерывна на отрезке \otr{a}{b}, то она достигает свою точную верхнюю грань $\alpha$ и свою точную нижнюю грань $\beta$.
+        \\
+        \proof пусть $f(x)$ не достигает $\alpha$. Введем функцию $g(x) = \frac{1}{\alpha - f(x)}$, непрерывную на \otr{a}{b}. Она ограничена сверху $A$.
+        \[ \frac{1}{\alpha - f(x)} \le A \]
+        \[ f(x) \le \alpha - \frac{1}{A} \]
+        следовательно $\alpha - \frac{1}{A}$ -- верхняя грань $f(x)$, что противоречит тому, что $\alpha$ -- точная верхняя грань.
+    
+    
+    \subsection*{Теорема о промежуточных значениях непрерывной функции}
+        \theorem если функции $f(x)$ непрерывна на отрезке \otr{a}{b} и принимает на его концах значения разных знаков, то существует такое $x_0 \in (a;b)$, что $f(x_0) = 0$.
+        \\
+        \proof пусть $f(a) < 0$ и $f(b) > 0$.
+        \[ X = \{x \in [a;b]: f(x) < 0\} \neq \varnothing \]
+        \[ \exists x_0 = \sup X \]
+        так как $f(x)$ непрерывна справа в точке $a$, она сохраняет свой знак в какой-то окрестности $a$, следовательно $x_0 \in (a;b)$.
+        Предположим, что $f(x_0) \neq 0$. Тогда в некой $\delta$ окрестности она сохраняет свой знак. Так как $x_0 = \sup X$,
+        $\exists x' \in (x_0 - \delta; x_0): f(x') < 0$. Однако $\forall x \in (x_0; x_0 + \delta) \longmapsto f(x) \ge 0$. Следовательно, $f(x_0)$ не сохраняет свой знак
+        ни в какой $\delta$ окрестности и равна $0$.
+        \\
+        \\
+        \theorem если функция $f(x)$ непрерывна на отрезке \otr{a}{b}, то она достигает любого своего промежуточного значения.
+        \\
+        \proof пусть $g(x) = f(x) - \gamma$, где $\gamma$ -- некое промежуточное значение. Функция $g(x)$ непрерывна и на концах \otr{a}{b} принимает значения разных знаков,
+        следовательно она достигает $0$ в некой точке $x_0$. $f(x_0) = g(x_0) + \gamma = \gamma$.
+        
+    \subsection*{Теорема об обратной функции}
+        \subsubsection*{Обратная функция}
+        Пусть $f(x)$ определена на множестве $X$, $Y$ -- множество ее значений. Если выполняется условие:
+        \[ \forall y \in Y \exists! x \in X: f(x) = y \]
+        то на $Y$ существует обратная функция $f^{-1}(y)$, каждому $y \in Y$ сопоставляющая такой $x \in X$, что $y = f(x)$.
+        
+        \subsubsection*{Теорема об обратной функции}
+        \lemma если $f(x)$ определена и строго монотонна на $X$, $Y$ -- множество ее значений, тогда на $Y$ определена и имеет такой
+        же тип сторогой монотонности, что и $f(x)$, обратная функция $f^{-1}(y)$.
+        \\
+        \proof так как $f(x)$ сторого монотонна:
+        \[ \forall x_1 \ne x_2 \longmapsto f(x_1) < f(x_2) \lor f(x_1) > f(x_2)\]
+        Следовательно, на $Y$ существует обратная функция $f^{-1}(y)$. Пусть $f(x)$ возрастает. Докажем возрастание $f^{-1}(y)$:
+        \[ \forall y_1 > y_2 \in Y \longmapsto f^{-1}(y_1) = x_1 > x_2 = f^{-1}(y_2) \]
+        пусть это не так:
+        \[ x_1 \le x_2 \]
+        \[ f(x_1) = y_1 \le y_2 = f(x_2) \]
+        противоречие.
+        \\
+        \\
+        \theorem пусть на \otr{a}{b} определена, непрерывна и сторого монотонна функция $f(x)$, $\alpha = \inf_{[a;b]} f(x)$, $\beta = \sup_{[a;b]} f(x)$.
+        Тогда на \otr{\alpha}{\beta} определена, непрерывна и сторого монотонна в том же направлении, что $f(x)$, обратная функция $f^{-1}(y)$.
+        \\
+        \proof существование и строгая монотонность $f^{-1}(y)$ следует из леммы. Докажем непрерывность обратной функции для возрастающей $f(x)$.
+        Для монотонно возрастающей $f^{-1}(y)$ для всех $y_0 \in (a; b)$ выполняется следующее неравенставо:
+        \[ f^{-1}(y_0 - 0) \le f^{-1}(y_0) \le f^{-1}(y_0 + 0) \]
+        Пусть разрывна в какой-то точке $y_0 \in (\alpha; \beta)$:
+        \[ f^{-1}(y_0 - 0) < f^{-1}(y_0) \lor f^{-1}(y_0) < f^{-1}(y_0 + 0) \]
+        Пусть выполняется левое неравенставо $f^{-1}(y_0 - 0) < f^{-1}(y_0)$:
+        \[ \forall y \in [\alpha; y_0) \longmapsto a \le f^{-1}(y) \le f^{-1}(y_0 - 0) = \sup_{[\alpha; y_0)} f^{-1}(y) < f^{-1}(y_0) \]
+        \[ \forall y \in [y_0; \beta] \longmapsto f^{-1}(y_0) \le f^{-1}(y) = \sup_{[\alpha; y_0)} f^{-1}(y) < f^{-1}(y_0) \]
+        значит \intr{f^{-1}(y_0 - 0)}{f^{-1}(y_0)} не принадлежит области значений $f^{-1}(y)$.
+        Интервал \intr{f^{-1}(y_0 - 0)}{f^{-1}(y_0)} лежит на отрезке \otr{a}{b}.
+        Следовательно образом \otr{\alpha}{\beta} является множество $[a;f^{-1}(y_0 - 0)) \cup (f^{-1}(y_0); b]$, что противоречит тому,
+        что образ \otr{\alpha}{\beta} -- \otr{a}{b}.
+        \\
+        К аналогичному противоречию проходим, рассмотрев правое неравенство $f^{-1}(y_0) < f^{-1}(y_0 + 0)$.
+        Для концов отрезка надо аналогичным образом доказать, что $f^{-1}(\alpha + 0) = f^{-1}(\alpha)$ и $f^{-1}(\beta - 0) = f^{-1}(\beta)$.
+        
+        
+        
 
 \end{document}
