--- a/main.tex
+++ b/main.tex
@@ -727,11 +727,11 @@
     \newpage
     
     \section{}
-    \subsection{Второй замечательный предел}
+    \subsection*{Второй замечательный предел}
         \[ e = \lim_{x \to \infty} {\left( 1 + \frac{1}{x} \right)}^x \]
 
 
-    \subsection{Определение и свойства экспоненты, показательной функции, логарифмической и степенной функций}
+    \subsection*{Определение и свойства экспоненты, показательной функции, логарифмической и степенной функций}
         \subsection*{Степенная функция с рациональным показателем}
         Функцию $f(x) = x^{\frac{p}{q}} = \left( \sqrt[q]{x} \right)^p $ где $x > 0 \in \mathbb{R}, p \in \mathbb{Z}, q \in \mathbb{N}$ назовем степенной с рациональным показателем.
         Если $p = 0$, то $f(x) = 1$, если $p < 0$, то $f(x) = \frac{1}{x^{\frac{-p}{q}}}$.
@@ -774,7 +774,7 @@
         где $x > 0, a \in \mathbb{R}, a > 0, a \neq 1, \beta \in \mathbb{R}.$
 
 
-    \subsection{Непрерывность элементарных функций}
+    \subsection*{Непрерывность элементарных функций}
         Элементарные функции непрервны всюду, где определены.
         
 
