--- a/main.tex
+++ b/main.tex
@@ -922,6 +922,56 @@
         \[ t'(x_0) = \frac{1}{u'(t_0)} \]
         \[ y(x_0) = v(t(x_0)) \]
         \[ y'(x_0) = v'(t_0) t'(x_0) = \frac{v'(t_0)}{u'(t_0)} \]
+
+
+    \newpage
+    
+    \section{}
+    \subsection*{Производные высших порядков}
+        Производная порядка $n$ функции $f(x)$ в точке $x_0$ $f^{(n)}(x_0)$ -- производная производной порядка $n - 1$ функции $f(x)$ в точке $x_0$ $f^{(n-1)}(x_0)$.
+        \\
+        Функция $f(x)$ $n$ раз диффиренцируема в точке $x_0$, если в точке $x_0$ у нее существует производная порядка $n$ $f^{(n)}(x_0)$.
+
+
+    \subsection*{Формула Лейбница для n-й производной произведения функций}
+        \theorem пусть функции $f(x)$ и $g(x)$ $n$ дифференцируемы в точке $x_0$. Тогда производная порядка $n$ их произведения $f(x)g(x)$ в точке $x_0$ $(f(x)g(x))^{(n)}(x_0)$ равна
+        $\sum_{k = 0}^{n} {n \choose k} f^{(k)}(x_0) g^{n - k}(x_0)$.
+        \\
+        \proof докажем по индукции.
+        \\
+        База: $n = 1$:
+        \[ (f(x)g(x))'(x_0) = {n \choose 0} f(x_0)g'(x_0) + {n \choose 1} f'(x_0)g(x_0) = f(x_0)g'(x_0) + f'(x_0)g(x_0) \]
+        база верна.
+        \\
+        Переход: предположим верно для $n$:
+        \[ (f(x)g(x))^{(n)}(x_0) = {n \choose 0} f(x_0)g^{(n)}(x_0) + {n \choose 1} f'(x_0)g^{(n-1)}(x_0) + ... + {n \choose n} f^{(n)}(x_0)g(x_0) \]
+        Проверим для $n + 1$:
+        \[ (f(x)g(x))^{(n + 1)}(x_0) = {n \choose 0} (f(x)g^{(n)}(x))'(x_0) + {n \choose 1} (f'(x)g^{(n-1)}(x))'(x_0) + ... + {n \choose n} (f^{(n)}(x)g(x))'(x_0) \]
+        \begin{multline*}
+            (f(x)g(x))^{(n + 1)}(x_0) = {n \choose 0} f(x_0)g^{(n+1)}(x_0) + {n \choose 0} f'(x_0)g^{(n)}(x_0) + \\
+            {n \choose 1} f'(x_0)g^{(n)}(x_0) + {n \choose 1} f''(x_0)g^{(n-1)}(x_0) + ... + \\
+            {n \choose n} (f^{(n)}(x_0)g'(x_0)) + {n \choose n} (f^{(n+1)}(x_0)g(x_0))'
+        \end{multline*}
+        \[ {n \choose k} + {n \choose k + 1} = {n + 1 \choose k + 1} \]
+        \[ {n \choose n} = {n + 1 \choose n + 1} \]
+        \[ {n \choose n0} = {n + 1 \choose 0} \]
+        \[ (f(x)g(x))^{(n + 1)}(x_0) = {n + 1 \choose 0} f(x_0)g^{(n+1)}(x_0) + {n + 1 \choose 1} f'(x_0)g^{(n)}(x_0) + ... + {n + 1 \choose n + 1} f^{(n+1)}(x_0)g(x_0) \]
+
+
+    \subsection*{Дифференциал второго порядка}
+        Пусть функция $f(x)$ дифференципуема в $\Delta$ окрестности точки $x_0$ и дважды дифференцируема в точке $x_0$.
+        Тогда в $\Delta$ окрестности точки $x_0$ определена функция $dy = f'(x)dx$.
+        Дифференциал второго порядка функции $f(x)$ в точке $x_0$ -- дифференциал ее дифференциала $dy$ в точке $x_0$ $d^2f(x_0)$.
+
+
+    \subsection*{Отсутствие инвариантности формы дифференциал второго порядка относительно замены переменной}
+        Пусть $z = g(y)$. Тогда:
+        \[ dz = g'(y_0) dy \]
+        \[ d(dz) (y_0) = d(g'(y)dy) (y_0) = (d(g'(y))dy + g'(y)d(dy))) (y_0) = g''(y_0)(dy)^2 + 0 = g''(y_0)(dy)^2 \]
+        Пусть $z = g(y)$, $y = f(x)$. Тогда:
+        \[ dz (y_0) = g'(y_0) dy \]
+        \[ d(dz) (y_0) = d(g'(y) dy) (y_0) = (d(g'(y))dy + g'(y)d(dy)) (y_0) = g''(y_0)(dy)^2 + g'(y_0)d^2y \]
+        Как видно, дифференциал второго порядка не обладает инвариантностью формы.
         
 
 \end{document}
