--- a/main.tex
+++ b/main.tex
@@ -972,6 +972,18 @@
         \[ dz (y_0) = g'(y_0) dy \]
         \[ d(dz) (y_0) = d(g'(y) dy) (y_0) = (d(g'(y))dy + g'(y)d(dy)) (y_0) = g''(y_0)(dy)^2 + g'(y_0)d^2y \]
         Как видно, дифференциал второго порядка не обладает инвариантностью формы.
-        
+
+
+    \newpage
+
+    \section{}
+    \subsection*{Теорема Ферма (необходимое условие существования локального экстремума)}
+        \subsubsection*{Локальный экстремум}
+        Точка называется локальным минимум функции
+    \subsection*{Теоремы о среднем Ролля, Лагранжа, Коши}
+    \subsection*{Формула Тейлора с остаточным членом в формах Пеано и Лагранжа}
+    \subsection*{Основные разложения по формуле Тейлора}
+    \subsection*{Правило Лопиталя для раскрытия неопределенностей вида $\frac{0}{0}$}
+    \subsection*{Правило Лопиталя для раскрытия неопределенностей вида $\frac{\infty}{\infty}$} 
 
 \end{document}
