--- a/main.tex
+++ b/main.tex
@@ -978,9 +978,76 @@
 
     \section{}
     \subsection*{Теорема Ферма (необходимое условие существования локального экстремума)}
+        Пусть $f(x)$ определена в точке $x_0$ и в некой $\Delta$ окрестности точки $x_0$.
+
         \subsubsection*{Локальный экстремум}
-        Точка называется локальным минимум функции
+        Точка $x_0$ называется локальным минимум функции $f(x)$, если есть такая выколотая $\delta \le \Delta$ окрестность точки $x_0$, что для любого $x$
+        в этой окрестности $f(x) > f(x_0)$.
+        Точка $x_0$ называется локальным максимумом функции $f(x)$, если есть такая выколотая $\delta \le \Delta$ окрестность точки $x_0$, что для любого $x$
+        в этой окрестности $f(x) < f(x_0)$.
+        Точка $x_0$ называется локальным экстремумом функции $f(x)$, она является либо локальным минимумом, либо локальным максимумом.
+        
+        \subsubsection*{Возрастание и убывание функции в точке}
+        Если функций $f(x)$ возрастает в точке $x_0$, то существует такая $\delta \le \Delta$ окрестности точки $x_0$,
+        что для всех $x < x_0$ $f(x) < f(x_0)$ и для всех $x > x_0$ $f(x) > f(x_0)$.
+        \\
+        Если функций $f(x)$ убывает в точке $x_0$, то существует такая $\delta \le \Delta$ окрестности точки $x_0$,
+        что для всех $x < x_0$ $f(x) > f(x_0)$ и для всех $x > x_0$ $f(x) < f(x_0)$.
+        
+        \subsubsection*{Возрастание и убывание дифференциремой функции в точке}
+        \theorem пусть функция $f(x)$ дифференцируема в точке $x_0$. Если $f'(x_0) < 0$, то $f(x)$ убывает в точке $x_0$.
+        Если $f'(x_0) > 0$, то $f(x)$ возрастает в точке $x_0$.
+        \\
+        \proof пусть $f'(x_0) > 0$.
+        \[ f'(x_0) = \lim_{\Delta x \to 0} \frac{f(x_0 + \Delta x) - f(x_0)}{\Delta x} \]
+        \[ \forall \varepsilon > 0 \exists \delta = \delta(\varepsilon) > 0: \forall x: 0 < |x - x_0| < \delta \longmapsto
+        f'(x_0) - \varepsilon < \frac{f(x) - f(x_0)}{x - x_0} < f'(x_0) + \varepsilon \]
+        Пусть $\varepsilon < f'(x_0)$. Тогда из предыдущего неравенства следует возрастание $f(x)$.
+        \\
+        Аналогично доказывается для  $f'(x_0) < 0$.
+
+        \subsubsection*{Теорема Ферма}
+        \theorem если функция $f(x)$ дифференицируема в точке $x_0$ и точка $x_0$ является локальным экстремумом функции $f(x)$, то $f'(x_0) = 0$.
+        \\
+        \proof Если $f'(x_0) \ne 0$, то $f(x)$ возрастает или убывает в точке $x_0$, что противоречит определению локального экстремума.
+        Следовательно, $f'(x_0) = 0$.
+
+
     \subsection*{Теоремы о среднем Ролля, Лагранжа, Коши}
+        \subsubsection*{Теорема Ролля}
+        \theorem пусть функция $f(x)$ непрерывна на \otr{a}{b}, дифференцируема на \intr{a}{b}, и $f(a) = f(b)$.
+        Тогда найдется такая точка $x_0$ на \intr{a}{b}, что $f'(x_0) = 0$.
+        \\
+        \proof так как $f(x)$ непрерывна на \otr{a}{b}, она достигает своей точной верхней грани $\alpha$ и точной нижней грани $\beta$.
+        Если $\alpha = \beta$, то $f(x) = const$ и $f'(x) = 0 \forall x \in (a;b)$.
+        Иначе, так как $f(a) = f(b)$, найдется такая точка $x_0$, что $f(x_0) = \alpha$ или $f(x_0) = \beta$.
+        По теорема Ферма в $x_0$ $f'(x_0) = 0$.
+        
+        \subsubsection*{Теорема Лагранжа}
+        \theorem пусть функция $f(x)$ непрерывна на \otr{a}{b} и дифференцируема на \intr{a}{b}.
+        Тогда найдется такая точка $x_0$ на \intr{a}{b}, что $ f(b) - f(a) = f'(x_0) (b - a) $.
+        \\
+        \proof введем следующую функцию:
+        \[ F(x) = f(x) - f(a) - \frac{f(b) - f(a)}{b - a}(x - a) \]
+        \[ F'(x) = f'(x) - \frac{f(b) - f(a)}{b - a} \]
+        $F(x)$ непрерывна на \otr{a}{b} и дифференцируема на \intr{a}{b} , $F(a) = F(b) = 0$. Следовательно, по теореме Ролля существует такая точка
+        $x_0$, что $F'(x_0) = 0$. Тогда:
+        \[ F'(x) = 0 = f'(x) - \frac{f(b) - f(a)}{b - a} \]
+        \[ f(b) - f(a) = f'(x_0) (b - a) \]
+
+        \subsubsection*{Теорема Коши}
+        \theorem пусть функции $f(x)$ и $g(x)$ непрерывны на \otr{a}{b} и дифференцируемы на \intr{a}{b}, $g'(x)$ не обращается на \intr{a}{b} в $0$.
+        Тогда найдется такая точка $x_0$ на \intr{a}{b}, что $ \frac{f(b) - f(a)}{g(b) - g(a)} = \frac{f'(x_0)}{g'(x_0} $.
+        \\
+        \proof введем следующую функцию:
+        \[ F(x) = f(x) - f(a) - \frac{f(b) - f(a)}{g(b) - g(a)}(g(x) - g(a)) \]
+        \[ F'(x) = f'(x) - \frac{f(b) - f(a)}{g(b) - g(a)} g'(x) \]
+        $F(x)$ непрерывна на \otr{a}{b} и дифференцируема на \intr{a}{b} , $F(a) = F(b) = 0$. Следовательно, по теореме Ролля существует такая точка
+        $x_0$, что $F'(x_0) = 0$. Тогда:
+        \[ F'(x) = 0 = f'(x) - \frac{f(b) - f(a)}{g(b) - g(a)} g'(x) \]
+        \[ \frac{f(b) - f(a)}{g(b) - g(a)} = \frac{f'(x_0)}{g'(x_0} \]
+        
+
     \subsection*{Формула Тейлора с остаточным членом в формах Пеано и Лагранжа}
     \subsection*{Основные разложения по формуле Тейлора}
     \subsection*{Правило Лопиталя для раскрытия неопределенностей вида $\frac{0}{0}$}
